# DevMarket

./: .env  Cargo.toml  README.md
migrations/: 20250808104515_init.sql  20250905101331_file_store.sql
src/: error.rs  ext.rs  main.rs
src/products/: mod.rs  model.rs
src/user/: mod.rs  model.rs
