[package]
name = "DevMarket"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio={ version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls","postgres","macros"]}
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.14"
thiserror = "1.0"
chrono = "0.4"
jsonwebtoken = "9"
serde_json = "1.0"
